<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rs_monitor2023</name>
  <version>1.0.0</version>
  <description>TODO: Mercury monitor program</description>
  <maintainer email="t200d100@gunma-u.ac.jp">akari</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
	<depend>rclcpp_components</depend>
  <depend>cv_bridge</depend>
	<depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>ros_robocore_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
